# pipelines

./: .dockerignore  .editorconfig  .env.example  .eslintrc.yaml  .gitignore  .markdownlintrc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yaml  ci.yaml  ci.yml  dependabot-auto-merge.yaml
configs/: __init__.py  config.yaml  data_connectors.yaml  e2e_test.yaml  log.yaml  production.yaml
configs/sample/: config.yaml  e2e_test.yaml  production.yaml
data/: __init__.py
data/fixtures/input/: sample.csv
data/fixtures/input/sample/: products.csv
data/fixtures/output/sample/: sample.csv
data/fixtures/validation/sample/: products.csv
data/input/sample/: products.csv
data/output/sample/: products.csv
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/LaTeX/: Dockerfile  build_documentation.sh  template.tex
pipelines/: __init__.py  __main__.py
pipelines/data/: manager.py  reader.py  writer.py
pipelines/data/connectors/: __init__.py  base.py  base_file.py  database.py  file.py  gcs.py
pipelines/data/schemas/: __init__.py  output.py
pipelines/sample/: __init__.py  constants.py  pipeline.py
pipelines/sample/schemas/: __init__.py  input.py  output.py  product.py
pipelines/sample/steps/: __init__.py  price_processor.py  product_identifier.py
pipelines/utils/: config.py  constants.py  dataframe.py  exceptions.py  file.py  log.py  strings.py  timing.py
scripts/: pipeline_job.yaml  run_cloud_run_job.sh
template/: __init__.py  __main__.py  pipeline.py
template/data/: __init__.py  reader.py  writer.py
template/data/connectors/: __init__.py  base.py  file.py
template/data/schemas/: input.py  output.py
template/steps/: price_processor.py
template/utils/: __init__.py  config.py  constants.py  log.py  timing.py
tests/: __init__.py
tests/pipelines/: __init__.py
tests/pipelines/sample/: __init__.py  pipeline_test.py
tests/pipelines/utils/: __init__.py  config_test.py
tests/template/: __init__.py  pipeline_test.py
tests/template/utils/: config_test.py
