[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = "Pipelines repository."
authors = [ "Niels Degrande <niels@degran.de>" ]
license = "Other/Proprietary"
readme = "README.md"
packages = []

[tool.poetry.scripts]
pipes = "pipelines.__main__:main"

[tool.poetry.dependencies]
python = "~3.11"
coloredlogs = "~15.0"
google-cloud-storage = "^2.18.2"
mlflow = "~2.16"
pandas = "~2.2"
pandera = "~0.20"
psycopg2-binary = "^2.9.9"
python-box = "~7.2"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pip-audit = "^2.7.3"
pre-commit = "~3.8"
pyright = "^1.1.379"
pytest = "~8.3"
pytest-cov = "~5.0"
pytest-mock = "~3.14"
pytest-timeout = "~2.3"
pytest-xdist = "~3.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
add-trailing-comma = "*"
black = "*"
codespell = "*"
ipython = "*"
isort = "*"
pandas-stubs = "*"
pre-commit = "*"
ruff = "*"
sqlfluff = "*"
types-PyYAML = "*"
vulture = "*"

[tool.pytest.ini_options]
timeout = "60"
addopts = [
    "--cov-report=html:test-reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov=pipelines",
    "--junitxml=test-reports/junit/junit.xml",
    "--no-cov-on-fail",
    "--strict-markers",
    "--verbose",
    "-r sxX",
]
cache_dir = ".cache"
# MLflow has a dependency on pkg_resources which is deprecated.
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]
testpaths = "tests"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Do not complain if tests do not hit defensive assertion code.
    "raise AssertionError",
    "raise NotImplementedError",

    # Do not complain if non-runnable code is not run.
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "D203", # one-blank-line-before-class (incompatible with D211).
    "D213", # multi-line-summary-second-line (incompatible with D212).
]

[tool.ruff.lint.per-file-ignores]
# Do not complain if __init__.py files have unused imports.
"__init__.py" = [ "F401" ]
# Do not complain if tests use the assert keyword.
"tests/*" = [ "S101" ]

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
