[project]
name = "pipelines"
version = "0.1.0"
description = "Pipelines repository."
authors = [ { name = "Niels Degrande", email = "niels@degran.de" } ]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "coloredlogs==15.0.1",
    "google-cloud-storage==3.6.0",
    "mlflow==3.7.0",
    "pandas==2.3.3",
    "pandera==0.27.0",
    "psycopg2-binary==2.9.11",
    "python-box==7.3.2",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
]

[project.scripts]
pipes = "pipelines.__main__:main"

[dependency-groups]
dev = [
    "add-trailing-comma",
    "codespell",
    "ipython",
    "isort",
    "pandas-stubs",
    "pre-commit",
    "ruff",
    "sqlfluff",
    "types-PyYAML",
    "vulture",
]
test = [
    "pip-audit==2.10.0",
    "pre-commit==4.5.0",
    "pyright==1.1.407",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
]

[tool.pytest.ini_options]
timeout = "60"
addopts = [
    "--cov-report=html:test-reports/htmlcov",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:test-reports/coverage.xml",
    "--cov=pipelines",
    "--junitxml=test-reports/junit/junit.xml",
    "--no-cov-on-fail",
    "--strict-markers",
    "--verbose",
    "-r sxX",
]
cache_dir = ".cache"
# MLflow has a dependency on pkg_resources which is deprecated.
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]
testpaths = "tests"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Do not complain if tests do not hit defensive assertion code.
    "raise AssertionError",
    "raise NotImplementedError",

    # Do not complain if non-runnable code is not run.
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "COM812", # missing-trailing-comma not needed due to use of formatter.
    "D203", # one-blank-line-before-class (incompatible with D211).
    "D213", # multi-line-summary-second-line (incompatible with D212).
    # Do not complain about TODOs with missing author or link.
    "FIX002",
    "TD002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
# Do not complain if __init__.py files have unused imports.
"__init__.py" = [ "F401" ]
# Do not complain if tests use the assert keyword.
"tests/*" = [ "S101" ]

[tool.uv]
default-groups = []

[build-system]
requires = [ "hatchling>=1.18.0" ]
build-backend = "hatchling.build"
